<resources>
    <string name="app_name">SAPI Virtual Assistant</string>
    <string name="oktato">Oktató</string>
    <string name="hallgato">Hallgató</string>
    <string name="vendeg">Vendég</string>
    <string name="szia">Szia, XY!</string>
    <string name="orarend">Órarend</string>
    <string name="naptar">Naptár</string>
    <string name="asszisztens">Asszisztens</string>
    <string name="profil_szerkesztese">Profil szerkesztése</string>
    <string name="beallitasok">Beállítások</string>
    <string name="sugo">Súgó</string>
    <string name="visszajelzes">Visszajelzés</string>
    <string name="kijelentkezes">Kijelentkezés</string>
    <string name="felhasznalanev">Felhasznalónév</string>
    <string name="szuletesi_datum">Születési Dátum</string>
    <string name="email_cim">E-mail Cím</string>
    <string name="telefonszam">Telefonszám</string>
    <string name="mentes">Mentés</string>
    <string name="esemenyek">Események</string>
    <string name="esemenyek_listaja">Események listája</string>
    <string name="oktato_vagy_hallgato">Oktató vagy Hallgató</string>
    <string name="jelszo">Jelszó</string>
    <string name="bejelentkezes">Bejelentkezés</string>
    <string name="topic_1">Topic 1</string>
    <string name="topic_2">Topic 2</string>
    <string name="topic_3">Topic 3</string>
    <string name="topic_4">Topic 4</string>
    <string name="lehetseges_felmerulo_kerdesek">Lehetséges felmerülő kérdések</string>
    <string name="ertekeles">Értékelés:</string>
    <string name="uzenet">Üzenet</string>
    <string name="kuldes">Küldés</string>
    <string name="kerdes">Kérdés</string>
    <string name="valasz">Válasz</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="esemeny_hozzaadasa">Esemény hozzáadása</string>
    <string name="elfelejtette_jelszavat">Elfelejtette jelszavát?</string>
    <string name="mesterseges_intelligencia">Mesterséges intelligencia</string>
    <string name="visszajelzes_feedback">Visszajelzés/Feedback</string>
    <string name="osszes">Összes</string>
</resources>